<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivityMyTaskText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C56464"
    tools:context=".activites.MainActivity">

    <Button
        android:id="@+id/mainActivityAddTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/add_task"
        app:layout_constraintBottom_toTopOf="@+id/mainActivityTaskOneButton"
        app:layout_constraintEnd_toStartOf="@+id/MainActivityAllTaskButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/MainActivityAllTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:text="@string/all_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mainActivityAddTaskButton" />

    <TextView
        android:id="@+id/mainActivityTextView"
        android:layout_width="75dp"
        android:layout_height="23dp"
        android:layout_marginTop="52dp"
        android:text="@string/my_tasks"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="134dp"
        android:layout_height="140dp"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/androidimageicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivityTextView"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainActivityUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="381dp"
        android:text="TextView"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/mainActivityAddTaskButton"
        app:layout_constraintEnd_toStartOf="@+id/mainActivityTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainActivitySettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainActivityTaskOneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/task1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityAllTaskButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainActivityRecyclerView"
        android:layout_width="297dp"
        android:layout_height="147dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/mainActivityAddTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>