<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C56464"
    tools:context=".activites.SettingsPageActivity">

    <EditText
        android:id="@+id/settingsPageActivityInputName"
        android:layout_width="257dp"
        android:layout_height="87dp"
        android:layout_marginTop="197dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/settingsPageActivityUpdateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsPageActivityInputName" />

    <EditText
        android:id="@+id/settingsPageInputTeamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="75dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_team_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/settingsPageActivityInputName"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/settingsPageActivitySpinner"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsPageActivityUpdateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>